fix: address the findings from the first SonarQube Cloud analysis
The first analysis reported one vulnerability and five code smells. Four were real.

ApplicationContextIT had no assertion at all (java:S2699). It would have passed even
if Flyway had silently applied nothing, which is precisely the failure it exists to
catch. It now queries information_schema to assert the baseline tables were created,
and exercises the full persistence path through the domain repository interface.

AppUser is now a record (java:S6206). The compact constructor keeps every invariant:
mandatory fields are still rejected when null, and the role set is still replaced with
an immutable copy, so a caller cannot grant themselves a role after construction.

AppUserTest had two potentially-throwing calls inside one assertThatThrownBy lambda
(java:S5778), which makes it ambiguous which call the assertion is about.

The remaining finding is deliberate and stays. java:S3330 flags the CSRF token cookie
for not being HttpOnly. The front end must be able to read that cookie to echo the
token back in a request header; making it HttpOnly would place it out of reach of
JavaScript and defeat CSRF protection altogether. The cookie carries no authority on
its own - the session lives in JSESSIONID, which is HttpOnly. The reasoning is now a
comment at the point of the decision rather than tribal knowledge.